cluster/apps/tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/name: tautulli
spec:
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
    spec:
      containers:
        - name: tautulli
          image: ghcr.io/tautulli/tautulli:v2.18.2
          ports:
          - containerPort: 8181
          resources:
              requests:
                cpu: "250m"
                memory: "512Mi"
              limits:
                cpu: "1000m"
                memory: "2048Mi"
          volumeMounts:
              - name: config
                mountPath: /config
      volumes:
            - name: config
              persistentVolumeClaim:
                claimName: tautulli-config


---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/name: tautulli
spec:
  selector:
    app.kubernetes.io/name: tautulli
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8181 
  type: ClusterIP
