cluster/apps/tautulli/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  namespace: media
  annotations:
    gethomepage.dev/description: Tautulli
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Management
    gethomepage.dev/icon: sh-tautulli
    gethomepage.dev/name: Tautulli
    gethomepage.dev/pod-selector: app.kubernetes.io/name=tautulli
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - plex-mon.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: tautulli
          port: 80
          weight: 1
